# pixman

./: CMakeLists.txt  pixman-1.pc.in
cmake/: config_configure.cmake
pixman/: CMakeLists.txt  pixman.h
test/: CMakeLists.txt
